# qrMqtt

./: .gitignore  CMakeLists.txt  Makefile  README.md  license  main.cpp  qrcam.cpp  qrmosq.cpp  qrmosq.h
config/: mosquitto.conf.example  qrMqtt.conf
docs/: DEPLOYMENT.md  SECURITY.md
include/qrMqtt/: config.hpp  event.hpp  mqtt_client.hpp  qr_scanner.hpp  qrmosq.h  token_validator.hpp
src/: config.cpp  duplicate_filter.cpp  event.cpp  main.cpp  mqtt_client.cpp  qr_scanner.cpp  qrcam.cpp  qrmosq.cpp  token_validator.cpp
systemd/: qrMqtt.service
tests/: core_tests.cpp
tools/: create_token.sh
